# cluecoins

./: .dockerignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: database.md
src/cluecoins/: __init__.py  __main__.py  adb.py  cli.py  database.py  quotes.py  storage.py  sync_manager.py
src/cluecoins/ui/: __init__.py  data_table.py  menu.py  style.tcss
tests/: conftest.py  test_cache.py  test_query_database.py  test_storage.py  test_ui.py
